--- a/src/main/resources/templates/tasks.html
+++ b/src/main/resources/templates/tasks.html
@@ -1,20 +1,8 @@
 <!DOCTYPE html>
 <html lang="nl" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <title>Task Manager</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style.css">
-
-</head>
+<head th:insert="_fragments.html :: head('All tasks')"></head>
 <body>
-<h1>Tasks</h1>
-<nav>
-    <ul>
-        <li><a href="/tasks">View all Tasks</a></li>
-        <li><a href="/tasks/new">Add Task</a></li>
-    </ul>
-</nav>
+<header th:replace="_fragments.html :: header('All tasks')"></header>
 <div th:if="${!tasks.isEmpty()}">
     <table>
         <tr th:each="task: ${tasks}">
