--- a/src/main/resources/templates/addSubtask.html
+++ b/src/main/resources/templates/addSubtask.html
@@ -17,7 +17,7 @@
             <input type="hidden" th:value="${task.uuid}" name="idMainTask">
 
         </div>
-        <button type="submit">Login</button>
+        <button type="submit">Add subtask</button>
     </div>
 </form>
 </body>
