Implemented second language

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -11,9 +11,14 @@ html, body {
     justify-content: center;
     font-family: Roboto, Arial, sans-serif;
     font-size: 15px;
+    margin-top: 15px;
 
 }
-nav {
+#language {
+    float: right;
+    margin-right: 5rem;
+}
+nav, ul {
     margin-left: 11%;
 }
 form {
@@ -47,7 +52,7 @@ button {
     cursor: grabbing;
     width: 100%;
 }
-h1 {
+h1, h2, h3 {
     text-align:left;
     margin-left: 12%;
 }
