--- a/src/main/resources/templates/addTask.html
+++ b/src/main/resources/templates/addTask.html
@@ -1,25 +1,24 @@
 <!DOCTYPE html>
 <html lang="nl" xmlns:th="http://www.thymeleaf.org">
-<head th:insert="_fragments.html :: head('Add Task')"></head>
+<head th:insert="_fragments.html :: head(#{add_task})"></head>
 <body>
-<header th:replace="_fragments.html :: header('Add task') "></header>
+<header th:replace="_fragments.html :: header(#{page_title_add_task}) "></header>
 <form action="/tasks/addTask" method="post" th:object="${task}" novalidate>
     <div class="formcontainer">
         <div class="container">
-            <label for="title"><strong>Title</strong></label>
+            <label for="title"><strong th:text="#{Title}"></strong></label>
             <p th:errors="*{title}"></p>
             <input type="text" th:field="*{title}" name="title" id="title" required>
 
-            <label for="description"><strong>Description</strong></label>
+            <label for="description"><strong th:text="#{Description}"></strong></label>
             <p th:errors="*{description}"></p>
             <input type="text" th:field="*{description}" id="description" name="description" required>
 
-            <label for="date"><strong>Due date:</strong></label>
+            <label for="date"><strong th:text="#{due_date}"></strong>:</label>
             <p th:errors="*{date}"></p>
             <input type="datetime-local" id="date" name="date" th:field="*{date}">
-            <button type="submit">Add Task</button>
+            <button type="submit" th:text="#{add_task}"></button>
         </div>
-
     </div>
 </form>
 </body>
